# clipboard-note

./: .gitignore  CMakeLists.txt  README.md
include/hotkey/: imHotKey.h
src/win/: HotKey.cpp  InputUtil.cpp  main.cpp  main_demo.cpp
